# c-ds

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ds.h  example.cpp  hashmap.h  hashmap_example.c  hybrid_array.c  hybrid_array.h  linked_list.h  linked_list_example.c  main.cpp  memory_manager.c  memory_manager.h  test_ds.c  test_hybrid_array.c  tree.h  trie.h  trie_example.c
.github/workflows/: ci.yml  makefile.yml
examples/: bst_example.c  hashmap_example.c  linked_list_example.c  trie_example.c
include/: Array.hpp  HybridArray.h  Traits.hpp
src/: Array.cpp  HybridArray.cpp
tests/: TestHybridArray.cpp
